--- a/style.css
+++ b/style.css
@@ -10,13 +10,25 @@ html {
 body {
     font-family: 'Vollkorn', sans-serif;
     text-align: center;
+    background-color: bisque;
+    margin: 50px;
 }
 
 img {
-    width: 150px;
-    height: 200px;
+    display: inline-block;
+    width: 400px;
+    height: 550px;
+    margin-right: 20px;
 }
 
+li{
+    padding: 20px;
+    list-style-type: none;
+}
+
+h1{
+    font-size: 2rem;
+}
 
 
 
