--- a/style.css
+++ b/style.css
@@ -14,6 +14,16 @@ body {
     margin: 50px;
 }
 
+h1{
+    font-size: 5rem;
+}
+h2{
+    font-size: 3rem;
+    margin: 20px 0;
+    text-decoration: underline;
+}
+
+
 img {
     display: inline-block;
     width: 400px;
@@ -26,9 +36,7 @@ li{
     list-style-type: none;
 }
 
-h1{
-    font-size: 2rem;
-}
+
 
 
 
