--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     margin: 0;
     padding: 0;
 }
+
 html {
     font-size: 16px;
 }
@@ -17,12 +18,16 @@ body {
 h1{
     font-size: 5rem;
 }
+
 h2{
-    font-size: 3rem;
+    font-size: 4rem;
     margin: 20px 0;
     text-decoration: underline;
 }
 
+p{
+    font-size: 2rem;
+}
 
 img {
     display: inline-block;
@@ -34,6 +39,7 @@ img {
 li{
     padding: 20px;
     list-style-type: none;
+    font-size: 2rem;
 }
 
 
